--- a/template.html
+++ b/template.html
@@ -19,11 +19,11 @@
 
         <img style="margin-top: 6px;height: 50px;width: 50px;border-radius: 25px;background-color: brown;"  src='file:///D:/Testing/PDF GENERATOR/pdf/src/assets/image/sai.png'> <span style="font-size: 30px;"> Sai Krupa Medical</span>
      <div style="width: 80%; margin-right: auto;margin-left: auto;margin-top: 5px;">
-         <p style="margin-bottom: 4px;float: left;width: 50%;">Dhanani Nagar,Shigaon Road</p>
+         <p style="margin-bottom: 4px;float: left;width: 50%;">Shop No.2,Nanudas Manidas Chawl,Sant Rohidas</p>
          
-         <p style="margin-bottom: 4px;float: right;width: 50%;">Mob No.:9370042249</p>
-         <p style="margin-bottom: 4px;float: left;width: 50%;">Boisar(East),Palghar - 401501</p>
-         <p style="margin-bottom: 4px;float: right;width: 50%;">Email:dharm8149@gmail.com</p></div>
+         <p style="margin-bottom: 4px;float: right;width: 50%;">Mob No.:9769697239 / 9892193421</p>
+         <p style="margin-bottom: 4px;float: left;width: 50%;"> Marg,Kranti Nagar,Kala Killa,Dharavi,Mumbai 17</p>
+         <p style="margin-bottom: 4px;float: right;width: 50%;">Email:saikrupamedical74@gmail.com</p></div>
      
      <p style="clear: both;border-bottom: 2px solid blue;"></p>
      </header>
@@ -32,7 +32,7 @@
 
 
      <footer  class="page-footer" id="pageFooter" style="bottom: 0;background-color: white;width:21cm;border-top: 3px solid blue;margin-left: auto;margin-right: auto;margin-bottom: 8px;text-align: center;margin-top: 0;padding-top: 10px;padding-bottom: 50px;">
-        <p>Please Contact As soon As Possible</p>
+        <p></p>
     </footer>
 </body>
 </html>
